product sent to cloudinary successfully

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=5001
-MONGO_URI=mongodb://localhost:27017/agrigrow
+MONGO_URI=mongodb+srv://ritik:ritik29luvu@cluster0.glauu6e.mongodb.net/agrigrow
 JWT_SECRET=hkjaslhhfdfhlkadykhjahflakikjlasdfahlkfljkas
+CLOUDINARY_CLOUD_NAME=ritik-kumar
+CLOUDINARY_API_KEY=329372184675418
+CLOUDINARY_API_SECRET=dJRQ_FJsNDgyshRN9caYT_bTlO0
