--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5001
-MONGO_URI=mongodb+srv://ritik:ritik29luvu@cluster0.glauu6e.mongodb.net/agrigrow
+MONGO_URI=mongodb+srv://ritik:ritikabc@cluster0.glauu6e.mongodb.net/agrigrow
 JWT_SECRET=hkjaslhhfdfhlkadykhjahflakikjlasdfahlkfljkas
 CLOUDINARY_CLOUD_NAME=ritik-kumar
 CLOUDINARY_API_KEY=329372184675418
