--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
